Implement DUUIImporter and SourceBuilder configuration properties for conditional execution